Sort out :// and MRL stuff
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Link issues together to show that they're related.
Learn more.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Rémi Denis-Courmont added Component::Core: Input Difficulty::medium Severity::normal Type::task Version::master git + 1 deleted label
added Component::Core: Input Difficulty::medium Severity::normal Type::task Version::master git + 1 deleted label
- Rémi Denis-Courmont changed milestone to %0.9.0 features freeze
changed milestone to %0.9.0 features freeze
- Developer
can we have details, or is it a private ticket ? ;)
- Author Maintainer
It's all about ambiguous handling of ':' inside MRLs. There was a vlc-devel thread about this last summer, but I lost track of it.
(In [23110]) when retrying set the demux to "" for real. refs #1228 (closed)
- Author Maintainer
Fixed in [25059].
- Rémi Denis-Courmont added Status::fixed label
added Status::fixed label
- Rémi Denis-Courmont closed
closed
Please register or sign in to reply