when retrying set the demux to "" for real. refs #1228